# vaultwares-cli

./: .gitignore  .gitmodules  Cargo.toml  PQC_GUIDELINES.md  TASKS.md  TASKS_TEST.md  TUI-ENHANCEMENT-PLAN.md  agent_image.md  agent_manifest.md  agent_text.md  agent_video.md  agent_workflow.md  assign_out.txt  assign_tasks.py  debug_tasks.py  fix_args.sh  fix_encoding.py  launch_full_team.ps1  run_args_refactor.py  run_coordinated_system.py  test_update.py
.github/: INSTRUCTIONS.md
crates/agentciation/: Cargo.toml
crates/agentciation/src/: bus.rs  catalog.rs  lib.rs  loader.rs  manifest.rs  protocol.rs
crates/api/tests/: proxy_integration.rs
crates/commands/src/: lib.rs
crates/plugins/src/: hooks.rs  lib.rs
crates/runtime/src/: bash.rs  config.rs  config_validate.rs  conversation.rs  file_ops.rs  hooks.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: config.rs  launcher.rs  lib.rs  manager.rs  registry.rs
crates/theme-gen/: Cargo.toml
crates/theme-gen/src/: lib.rs
crates/tools/src/: lib.rs
crates/vaultwares-cli/: Cargo.toml
crates/vaultwares-cli/src/: app.rs  args.rs  format.rs  main.rs  pqc.rs  render.rs  session_mgr.rs
crates/vaultwares-cli/src/tui/: diff_view.rs  mod.rs  pager.rs  session_picker.rs  status_bar.rs  tool_panel.rs
crates/vaultwares-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
crates/vaultwares-fhe/: Cargo.toml
crates/vaultwares-fhe/src/: lib.rs
examples/: sample_pipeline_comfyui.json
scratch/: convert_agents.py  deduplicate.py  final_sweep.py  fix_impl_syntax.py  fix_trait_vis.py  fix_visibility.py  refactor_main.py  surgical_cleanup.py  surgical_dedup.py
