[package]
name = "supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agentciation = { path = "../agentciation" }
anyhow.workspace = true
chrono.workspace = true
redis.workspace = true
runtime = { path = "../runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
