[package]
name = "vaultwares-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "vaultwares-cli"
path = "src/main.rs"

[dependencies]
agentciation = { path = "../agentciation" }
api = { path = "../api" }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
pulldown-cmark = "0.13"
ratatui.workspace = true
storage = { path = "../storage" }
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
supervisor = { path = "../supervisor" }
syntect = "5"
theme-gen = { path = "../theme-gen" }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
tools = { path = "../tools" }
fips203 = "0.4.0"
pqcrypto-kyber = "0.8.0"

[lints]
workspace = true

[dev-dependencies]
mock-anthropic-service = { path = "../mock-anthropic-service" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

